Fix error on mac os.

--- a/http/CMakeLists.txt
+++ b/http/CMakeLists.txt
@@ -1,5 +1,9 @@
 function(generate_ragel input output)
-    set(ragel_cmd "${RAGEL_EXECUTABLE} -G2 -o ${output} ${input} && sed -i -e '1h\;2,$H\;$!d\;g' -re 's/static const char _nfa[^;]*\;//g' ${output}")
+    if (APPLE)
+        set(ragel_cmd "${RAGEL_EXECUTABLE} -G2 -o ${output} ${input} && sed -i '' -e '1h\;2,$H\;$!d\;g' -Ee 's/static const char _nfa[^;]*\;//g' ${output}")
+    else()
+        set(ragel_cmd "${RAGEL_EXECUTABLE} -G2 -o ${output} ${input} && sed -i -e '1h\;2,$H\;$!d\;g' -re 's/static const char _nfa[^;]*\;//g' ${output}")
+    endif ()
     message(STATUS ${ragel_cmd})
     execute_process(COMMAND sh -c ${ragel_cmd})
 endfunction(generate_ragel)
